tests/reference/asr-kind_01-6c675be.stderr
semantic error: Expected scalar argument for aint intrinsic
 --> tests/errors/kind_01.f90:3:36
  |
3 |     print *, aint([1.0, 2.0, 3.0], [4, 4])
  |                                    ^^^^^^ 
